[package]
name = "imslice"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "imslice"
path = "main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
image = { version = "0.25.9", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "avif-native"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
